--- a/src/about/about.scss
+++ b/src/about/about.scss
@@ -153,5 +153,5 @@
         width:100%;
     }
     #canvas1 { display: none}
-    #replay { display: none}
+    #replay { display: none; opacity: 0}
 }
