--- a/src/work/work.scss
+++ b/src/work/work.scss
@@ -306,3 +306,54 @@ h1:after {
     }
 }
 
+@media only screen and (max-width: 760px) {
+    #header {
+        left: -22%;
+        font-size:28px;
+    }
+    #projects { display: block; height: 100%;}
+    #listDiv {
+        width:100%;
+        margin-top: 160px;
+        overflow-y: visible;
+        img {
+            width:80%;
+            margin: 12% auto;
+        }
+        img:nth-child(2) { width: 60%; }
+    }
+    #details {
+        width: 100%;
+
+        .scene {
+            width: 300px;
+            height: 300px;
+
+            .cube_face {
+                width: 300px;
+                height: 300px;
+
+                img {
+                    width: 270px;
+                    height: auto;
+                }
+
+                .cubeSide {
+                    width: 270px;
+                    height: 142px;
+                }
+
+                .cubeSideBottom {
+                    width: auto;
+                    height: 270px;
+                }
+            }
+
+
+            .bottom img {
+                margin: auto 8px;
+            }
+        }
+    }
+}
+
